@@ -6,20 +6,27 @@ package net.sourceforge.pmd.rules;
 import java.util.List;
 import java.util.Map;
 
-import net.sourceforge.pmd.AbstractRule;
+import net.sourceforge.pmd.AbstractJavaRule;
+import net.sourceforge.pmd.ast.ASTConstructorDeclaration;
 import net.sourceforge.pmd.ast.ASTMethodDeclarator;
 import net.sourceforge.pmd.symboltable.NameOccurrence;
 import net.sourceforge.pmd.symboltable.VariableNameDeclaration;
 
-public class AvoidReassigningParameters extends AbstractRule {
+public class AvoidReassigningParameters extends AbstractJavaRule {
 
+	@Override
     public Object visit(ASTMethodDeclarator node, Object data) {
         Map<VariableNameDeclaration, List<NameOccurrence>> params = node.getScope().getVariableDeclarations();
+        this.lookForViolation(params, data);
+        return super.visit(node, data);
+    }
+
+	private void lookForViolation(Map<VariableNameDeclaration,List<NameOccurrence>> params,Object data) {
         for (Map.Entry<VariableNameDeclaration, List<NameOccurrence>> entry: params.entrySet()) {
             VariableNameDeclaration decl = entry.getKey();
             List<NameOccurrence> usages = entry.getValue();
             for (NameOccurrence occ: usages) {
-                if ((occ.isOnLeftHandSide() || occ.isSelfAssignment()) && 
+                if ((occ.isOnLeftHandSide() || occ.isSelfAssignment()) &&
                     occ.getNameForWhichThisIsAQualifier() == null &&
                     (!decl.isArray() || occ.getLocation().jjtGetParent().jjtGetParent().jjtGetNumChildren() == 1))
                 {
@@ -28,6 +35,12 @@ public class AvoidReassigningParameters extends AbstractRule {
                 }
             }
         }
-        return super.visit(node, data);
+	}
+
+    @Override
+    public Object visit(ASTConstructorDeclaration node,Object data) {
+    	Map<VariableNameDeclaration,List<NameOccurrence>> params = node.getScope().getVariableDeclarations();
+    	this.lookForViolation(params, data);
+    	return super.visit(node,data);
     }
 }
