@@ -6,6 +6,7 @@ package net.sourceforge.pmd.rules.optimization;
 import java.util.List;
 import java.util.Map;
 
+import net.sourceforge.pmd.ast.ASTConstructorDeclaration;
 import net.sourceforge.pmd.ast.ASTFormalParameter;
 import net.sourceforge.pmd.ast.ASTMethodDeclaration;
 import net.sourceforge.pmd.ast.AccessNode;
@@ -15,12 +16,17 @@ import net.sourceforge.pmd.symboltable.VariableNameDeclaration;
 
 public class MethodArgumentCouldBeFinal extends AbstractOptimizationRule {
 
+	@Override
     public Object visit(ASTMethodDeclaration meth, Object data) {
         if (meth.isNative() || meth.isAbstract()) {
             return data;
         }
-        Scope s = meth.getScope();
-        Map<VariableNameDeclaration, List<NameOccurrence>> decls = s.getVariableDeclarations();
+        this.lookForViolation(meth.getScope(),data);
+        return super.visit(meth,data);
+    }
+
+	private void lookForViolation(Scope scope, Object data) {
+        Map<VariableNameDeclaration, List<NameOccurrence>> decls = scope.getVariableDeclarations();
         for (Map.Entry<VariableNameDeclaration, List<NameOccurrence>> entry: decls.entrySet()) {
             VariableNameDeclaration var = entry.getKey();
             AccessNode node = var.getAccessNodeParent();
@@ -28,7 +34,12 @@ public class MethodArgumentCouldBeFinal extends AbstractOptimizationRule {
                 addViolation(data, node, var.getImage());
             }
         }
-        return data;
-    }
+	}
+
+	@Override
+	public Object visit(ASTConstructorDeclaration constructor, Object data) {
+		this.lookForViolation(constructor.getScope(), data);
+		return super.visit(constructor,data);
+	}
 
 }
